@@ -4,7 +4,14 @@ Python Mode News
 New in version 6.1.1
 ---------------------
 
-- when boolean `py-tab-indents-region-p' is `t',
+- comment-related commands:
+  py-uncomment 
+  py-comment-block, py-comment-clause,
+  py-comment-block-or-clause, py-comment-def,
+  py-comment-class, py-comment-def-or-class,
+  py-comment-statement
+
+- when `py-tab-indents-region-p' is `t',
   TAB will indent/cycle the region, not just the current line.
 
 - command from RET customizable via `py-return-key':
